compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__bit_array_segment_type_does_not_allow_unit_codepoint_utf32.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case <<1>> { <<1:utf32_codepoint-unit(2)>> -> 1 }"
---
error: Invalid bit array segment
  ┌─ /src/one/two.rakun:1:18
  │
1 │ case <<1>> { <<1:utf32_codepoint-unit(2)>> -> 1 }
  │                  ^^^^^^^^^^^^^^^ Unit cannot be specified here

Hint: utf32_codepoint segments are sized based on their value and cannot
have a unit.
See: https://tour.rakun.run/data-types/bit-arrays/
