compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__bit_array_segment_unit_no_size.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 175
expression: "let x = <<1:unit(5)>> x"
---
----- SOURCE CODE
let x = <<1:unit(5)>> x

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.rakun:1:13
  │
1 │ let x = <<1:unit(5)>> x
  │             ^^^^^^^ This needs an explicit size

Hint: If you specify unit() you must also specify size().
See: https://tour.rakun.run/data-types/bit-arrays/
